--- a/index.htm
+++ b/index.htm
@@ -68,20 +68,22 @@
                 <div class="col">
                     <h3>Social Connections</h3>
                     <p id="col2p1">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium</p>
-                    <p id="icons1">
+                    <!-- Way 1 -->
+                    <!-- <p id="icons1">
                         <a id="rss" target="_blank" href="https://rss.com/"></a>
                         <a id="fcb" target="_blank" href="https://www.facebook.com/"></a>
                         <a id="lin" target="_blank" href="https://www.linkedin.com/"></a>
                         <a id="ytb" target="_blank" href="https://www.youtube.com/"></a>
                         <a id="tmb" target="_blank" href="https://www.tumblr.com/"></a>
-                    </p>
-                    <!-- <p id="icons2">
+                    </p> -->
+                    <!-- Way 2 -->
+                    <p id="icons2">
                         <i class="fas fa-rss-square" aria-hidden="true"></i>
                         <i class="fab fa-facebook-square" aria-hidden="true"></i>
                         <i class="fab fa-linkedin" aria-hidden="true"></i>
                         <i class="fab fa-youtube-square" aria-hidden="true"></i>
                         <i class="fab fa-tumblr-square" aria-hidden="true"></i>
-                    </p> -->
+                    </p>
                     <h4>Newsletter</h4>
                     <p id="col2p2">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium</p>
                     <form>
